# mrz-parser

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  README.md  SECURITY.md  build.sh  deny.toml
.github/workflows/: ci.yml  coverage.yml
mrz-cli/: Cargo.toml
mrz-cli/src/: main.rs
mrz-core/: Cargo.toml
mrz-core/src/: checked_field.rs  checksum.rs  field_correction.rs  lib.rs  ocr.rs  parser.rs
mrz-core/tests/: bcbp.rs  checked_field.rs  checksum.rs  field_corrections.rs  icao.rs  invalid.rs  ocr.rs  td1.rs  td3.rs
mrz-core/tests/common/: mod.rs
mrz-host/: Cargo.toml
mrz-host/src/: date.rs  lib.rs  model.rs  parser.rs  util.rs  validation.rs
mrz-host/tests/: integration.rs
mrz-host/tests/fixtures/: samples.json
mrz-parser/: Cargo.toml  main.swift
mrz-parser/src/: lib.rs  uniffi_api.rs
src/: lib.rs
src/parser/: mod.rs  td1.rs  td2.rs  td3.rs
src/validation/: checksum.rs  field_validators.rs  mod.rs
swift/: Package.swift
swift/Sources/MRZParserWrapper/: MRZParser.swift
swift/Tests/MRZParserFFITests/: MRZParserFFITests.swift  MRZParserWrapperTests.swift
tests/: basic_tests.rs  td3_tests.rs  validation_tests.rs
